<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guess The Animal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_instructions">Please answer the question so I can guess which animal are you thinking of...</string>
    <string name="txt_yes">Yes</string>
    <string name="txtNo">No</string>
    <string name="txtAdd">Add</string>
    <string name="txt_new_animal">What animal were you thinking?</string>
    <string name="txt_new_question">Give me a question so I can learn it.</string>

</resources>
