<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestionsActivity" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_instructions" />    
    
    <TextView
        android:id="@+id/lblMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView1"
        android:text="@string/hello_world" />

    <LinearLayout
        android:id="@+id/layButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/lblMessage"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_yes" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNo" />

    </LinearLayout>

     <ScrollView
        android:id="@+id/vwEdit"
     	android:layout_width="match_parent"
     	android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:layout_below="@id/layButtons"
     	android:padding="5dp"
     	android:visibility="invisible" >
    
	    <LinearLayout
	        android:orientation="vertical"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/bg_add"
	        android:paddingTop="15dp" >
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:padding="5dp"
		            android:text="@string/txt_new_animal" />
				<EditText
				    android:id="@+id/txtNewAnimal"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:ems="10"
				    android:padding="5dp"
				    android:inputType="textMultiLine" />
				<TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:padding="5dp"
		            android:text="@string/txt_new_question" />
				<EditText
			        android:id="@+id/txtNewQuestion"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:padding="5dp"
			        android:inputType="textMultiLine" />
				<Button
		            android:id="@+id/btnAdd"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:padding="5dp"
		            android:text="@string/txtAdd" />
		</LinearLayout>
    </ScrollView>


</RelativeLayout>